timelimit (1.7-2) UNRELEASED; urgency=low

  * Actually enable the build hardening by default (depend on a hardening
    package) and switch from the hardening-wrapper to hardening-includes.

 -- Peter Pentchev <roam@ringlet.net>  Thu, 06 Jan 2011 17:16:29 +0200

timelimit (1.7-1) experimental; urgency=low

  * New upstream release:
    - use setitimer(2) for subsecond precision.  Closes: #597824
    - update the years in the copyright file
  * Bump Standards-Version to 3.9.1 with no changes.
  * Switch to Git and point the Vcs-* fields to Gitorious.
  * Switch to bzip2 compression for the Debian tarball.
  * Bump the debhelper compatibility level to 8 with no changes.

 -- Peter Pentchev <roam@ringlet.net>  Thu, 30 Sep 2010 13:01:11 +0300

timelimit (1.6-1) unstable; urgency=low

  * Bump Standards-Version to 3.9.0 with no changes.
  * Convert to the 3.0 (quilt) source format with no changes.
  * Use dpkg-buildflags from dpkg-dev 1.15.7 to obtain the default values
    for CFLAGS, CPPFLAGS, and LDFLAGS.
  * Update the copyright file to the latest revision of the DEP 5 format
    and bump the year on my copyright notice.
  * Shorten the Vcs-Browser URL.
  * New upstream version:
    - actually honor CPPFLAGS :)
    - explicitly pass the new changelog name, NEWS, to dh_installchangelogs

 -- Peter Pentchev <roam@ringlet.net>  Tue, 29 Jun 2010 00:22:32 +0300

timelimit (1.5-1) unstable; urgency=low

  * New upstream release
    - add the -p flag to propagate a termination signal.  Closes: #547452
  * Bump Standards-Version to 3.8.3 with no changes.

 -- Peter Pentchev <roam@ringlet.net>  Sat, 31 Oct 2009 17:21:26 +0200

timelimit (1.4-2) unstable; urgency=low

  * Refer to GPL-2, not just GPL, in the copyright file.
  * Bump Standards-Version to 3.8.1 with no changes.
  * Add misc:Depends to the binary package.
  * Minimize the rules file using debhelper override targets.
  * Update the copyright years for the Debian packaging.